# claude-scriptcheck

./: .gitignore  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  Cargo.toml  README.md  prek.toml
.claude/: settings.json
.github/: renovate.json5
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml
scripts/: check-no-llm-author.py  format-section-comments.py
src/: apply_patch.rs  args.rs  canonicalize.rs  canonicalize_tests.rs  checker.rs  checker_tests.rs  cli.rs  cli_tests.rs  cmd_parser.rs  cmd_parser_tests.rs  codex_settings.rs  env_hooks.rs  file_access.rs  file_access_tests.rs  filter.rs  hook.rs  lib.rs  logging.rs  main.rs  path_util.rs  permission.rs  permission_mode.rs  permission_tests.rs  python_ast.rs  settings.rs  settings_tests.rs  word_util.rs
src/cmd_parser/: archive.rs  archive_tests.rs  clap_parsers.rs  clap_parsers_tests.rs  compression.rs  compression_tests.rs  dd.rs  dd_tests.rs  filesystem.rs  filesystem_tests.rs  find.rs  find_tests.rs  git.rs  git_tests.rs  grep.rs  grep_tests.rs  helpers.rs  helpers_tests.rs  manual_parsers.rs  manual_parsers_tests.rs  mod.rs  network.rs  network_tests.rs  readers.rs  readers_tests.rs  script_runners.rs  script_runners_tests.rs  sed.rs  sed_tests.rs  tar.rs  tar_tests.rs  wrappers.rs  wrappers_tests.rs  writers.rs  writers_tests.rs
src/filter/: bash.rs  path.rs
src/python_ast/: builtins.rs  visitor.rs  visitor_tests.rs
tests/: integration.rs  suite.rs
tests/schemas/: README.md  claude-code-settings.schema.json
tests/suite/: canonicalize.rs  checker.rs  cli.rs  cmd_parser.rs  file_access.rs  integration.rs  path_util.rs  permission.rs  repo_infra.rs  settings.rs
(+2 files in other folders)
