[package]
name = "claude-scriptcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
thaum = { git = "https://github.com/bindreams/thaum.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob-match = "0.2"
path-clean = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "string"] }
serde_yml = "0.0.12"
skuld = { git = "https://github.com/bindreams/skuld.git" }
pretty_assertions = "1"

[dev-dependencies]

[[test]]
name = "suite"
harness = false

[profile.release]
opt-level = 2
lto = "thin"
